feat: fix product id in user orders
